fixed width footer, centered to match header on tablet

--- a/style.css
+++ b/style.css
@@ -1347,7 +1347,7 @@ article footer {
 .entry-meta {
 	float: left;
 	margin-top: 9px;
-	margin-left: 5px;
+	margin-left: 12px;
 }
 
 article img {
@@ -1356,18 +1356,25 @@ article img {
 }
 
 .site-footer {
-	width: 728px;
-	margin: 0px auto;
 }
 
 .foot-wrap {
-	padding: 12px;
+	width: 728px;
+	margin: 0px auto;
+	padding: 24px 5px;
 }
 
 .foot-col {
 	float: left;
 	min-width: 150px;
 	font-size: 14px;
+	padding: 5px;
+}
+
+
+.foot-col ul,
+.foot-col ol {
+	margin: 0px 0px 12px 0px;
 }
 
 }
